--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="LockedOrientationActivity">
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
     <application
         android:name="com.samsung.health.mobile.MobileApp"
         android:allowBackup="true"
@@ -12,20 +15,24 @@
         <service
             android:name="com.samsung.health.mobile.data.DataListenerService"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
                 <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
                 <action android:name="com.google.android.gms.wearable.REQUEST_RECEIVED" />
                 <action android:name="com.google.android.gms.wearable.CAPABILITY_CHANGED" />
                 <action android:name="com.google.android.gms.wearable.CHANNEL_EVENT" />
-
                 <data
                     android:host="*"
                     android:pathPrefix="/msg"
                     android:scheme="wear" />
             </intent-filter>
         </service>
+
+        <service
+            android:name=".presentation.ProcessingService"
+            android:exported="false"
+            android:foregroundServiceType="dataSync" />
+
         <activity
             android:name="com.samsung.health.mobile.presentation.MainActivity"
             android:configChanges="orientation|keyboardHidden"
@@ -40,5 +47,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
